--- a/app/new.html
+++ b/app/new.html
@@ -66,29 +66,29 @@
 			    	</div>
 	    		</div>
 	    	</div>
+	    	<!-- InstanceBeginEditable name="EditRegion5" -->
+			<!-- =secondary-nav -->
+			<div class="secondary-nav">
+				<div class="container">
+					<div class="col-offset-1">
+						<ul class="d-flex">
+							<li><a href="#" title="">About Us</a></li>
+							<li><a href="#" title="">Materials & Technologies</a></li>
+							<li><a href="#" title="">Certificates & Warranty</a></li>
+							<li class="active"><span>News & Exhibitions</span></li>
+						</ul>
+					</div>
+				</div>			
+			</div>
+			<!-- =/secondary-nav -->	
+			<!-- InstanceEndEditable -->		
 		</header>
 		<!-- =/header -->
 
-
-		<!-- =neck -->
-		<div class="neck">
-			<div class="container">
-				<div class="col-offset-1">
-					<ul class="d-flex">
-						<li><a href="#" title="">About Us</a></li>
-						<li><a href="#" title="">Materials & Technologies</a></li>
-						<li><a href="#" title="">Certificates & Warranty</a></li>
-						<li class="active"><span>News & Exhibitions</span></li>
-					</ul>
-				</div>
-			</div>			
-		</div>
-		<!-- =/neck -->
-
 		<!-- =main -->
+		<!-- InstanceBeginEditable name="EditRegion3" -->
 		<div class="main">
-			<div class="container">
-			<!-- InstanceBeginEditable name="EditRegion3" -->
+			<div class="container">	
 				<div class="back col-offset-1"><a href="news.html" title="" class="back__link">Back</a></div>
 				<div class="d-flex">
 					<div class="content col-offset-1 col-5">
@@ -194,9 +194,9 @@
 						</section>
 					</aside>
 				</div>
-			<!-- InstanceEndEditable -->
 			</div>
 		</div>
+			<!-- InstanceEndEditable -->
 		<!-- =/main -->
 
 		<!-- =footer -->
