--- a/app/news.html
+++ b/app/news.html
@@ -66,129 +66,129 @@
 			    	</div>
 	    		</div>
 	    	</div>
+	    	<!-- InstanceBeginEditable name="EditRegion5" -->
+			<!-- =secondary-nav -->
+			<div class="secondary-nav">
+				<div class="container">
+					<div class="col-offset-1">
+						<ul class="d-flex">
+							<li><a href="#" title="">About Us</a></li>
+							<li><a href="#" title="">Materials & Technologies</a></li>
+							<li><a href="#" title="">Certificates & Warranty</a></li>
+							<li class="active"><span>News & Exhibitions</span></li>
+						</ul>
+					</div>
+				</div>			
+			</div>
+			<!-- =/secondary-nav -->
+			<!-- InstanceEndEditable -->		
 		</header>
 		<!-- =/header -->
 
-
-		<!-- =neck -->
-		<div class="neck">
-			<div class="container">
-				<div class="col-offset-1">
-					<ul class="d-flex">
-						<li><a href="#" title="">About Us</a></li>
-						<li><a href="#" title="">Materials & Technologies</a></li>
-						<li><a href="#" title="">Certificates & Warranty</a></li>
-						<li class="active"><span>News & Exhibitions</span></li>
-					</ul>
-				</div>
-			</div>			
-		</div>
-		<!-- =/neck -->
-
 		<!-- =main -->
+		<!-- InstanceBeginEditable name="EditRegion3" -->
 		<div class="main">
-			<div class="container">
-			<!-- InstanceBeginEditable name="EditRegion3" -->
-			<section class="content col-offset-1">
-				<header>
-					<h1>NEWS</h1>						
-				</header>
+			<div class="container">		
+				<section class="content col-offset-1">
+					<header>
+						<h1>NEWS</h1>						
+					</header>
 
-				<!-- =list news -->
-				<div class="list-news d-flex flex-wrap">
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-11.jpg" alt="" />									
-							</div>
-							<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
-							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-						</a>
-					</article>
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-12.jpg" alt="" />									
-							</div>
-							<h3 class="new__title">NEW friction formula!</h3>
-							<p>SB Nagamochi is testing new materials for brake pads</p>
-						</a>
-					</article>
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-13.jpg" alt="" />									
-							</div>
-							<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
-							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-						</a>
-					</article>	
+					<!-- =list news -->
+					<div class="list-news d-flex flex-wrap">
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-11.jpg" alt="" />									
+								</div>
+								<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
+								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+							</a>
+						</article>
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-12.jpg" alt="" />									
+								</div>
+								<h3 class="new__title">NEW friction formula!</h3>
+								<p>SB Nagamochi is testing new materials for brake pads</p>
+							</a>
+						</article>
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-13.jpg" alt="" />									
+								</div>
+								<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
+								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+							</a>
+						</article>	
 
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-14.jpg" alt="" />
-							</div>
-							<h3 class="new__title">AUTOMECHANIKA MEXICO</h3>
-							<p>Booth 3820, 10-12 Jul 2013, Centro Banamex, Mexico</p>
-						</a>
-					</article>
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-15.jpg" alt="" />
-							</div>
-							<h3 class="new__title">MOTOR SHOW 2013, YANGON MYANMAR, 15-18 MARCH 2013AUTOMECHANIKA DUBAI 2018</h3>
-							<p>Booth M-7, Tatmadaw Hall, Yangon Conventional, Myanmar</p>
-						</a>
-					</article>
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-16.jpg" alt="" />									
-							</div>
-							<h3 class="new__title">PhilAuto 2014 Manila 29 - 31 May, 2014</h3>
-							<p>JNBK Corp. presents its 3 brands including SB NagamochiSB Nagamochi is testing new materials for brake pads</p>
-						</a>
-					</article>	
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-14.jpg" alt="" />
+								</div>
+								<h3 class="new__title">AUTOMECHANIKA MEXICO</h3>
+								<p>Booth 3820, 10-12 Jul 2013, Centro Banamex, Mexico</p>
+							</a>
+						</article>
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-15.jpg" alt="" />
+								</div>
+								<h3 class="new__title">MOTOR SHOW 2013, YANGON MYANMAR, 15-18 MARCH 2013AUTOMECHANIKA DUBAI 2018</h3>
+								<p>Booth M-7, Tatmadaw Hall, Yangon Conventional, Myanmar</p>
+							</a>
+						</article>
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-16.jpg" alt="" />									
+								</div>
+								<h3 class="new__title">PhilAuto 2014 Manila 29 - 31 May, 2014</h3>
+								<p>JNBK Corp. presents its 3 brands including SB NagamochiSB Nagamochi is testing new materials for brake pads</p>
+							</a>
+						</article>	
 
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-17.jpg" alt="" />
-							</div>
-							<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
-							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-						</a>
-					</article>
-					<article class="new__item">
-						<a href="new.html" title="" class="new__link">
-							<div class="new__thumb">
-								<img src="tmp/new-18.jpg" alt="" />									
-							</div>
-							<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
-							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-						</a>
-					</article>											
-				</div>
-				<!-- =/list news -->
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-17.jpg" alt="" />
+								</div>
+								<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
+								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+							</a>
+						</article>
+						<article class="new__item">
+							<a href="new.html" title="" class="new__link">
+								<div class="new__thumb">
+									<img src="tmp/new-18.jpg" alt="" />									
+								</div>
+								<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
+								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+							</a>
+						</article>											
+					</div>
+					<!-- =/list news -->
 
-				<!-- =pagination -->
-				<div class="pagination">
-					<a href="#" class="prev">Back</a>
-					<span class="current">1</span>
-					<a href="#" title="">2</a>
-					<a href="#" title="">3</a>
-					<a href="#" title="">4</a>
-					<!-- <span class="separator">...</span> -->
-					<a href="#" title="">5</a>
-					<a href="#" class="next">Next</a>
-				</div>
-				<!-- =/pagination -->
-			</section>
-			<!-- InstanceEndEditable -->
+					<!-- =pagination -->
+					<div class="pagination">
+						<a href="#" class="prev">Back</a>
+						<span class="current">1</span>
+						<a href="#" title="">2</a>
+						<a href="#" title="">3</a>
+						<a href="#" title="">4</a>
+						<!-- <span class="separator">...</span> -->
+						<a href="#" title="">5</a>
+						<a href="#" class="next">Next</a>
+					</div>
+					<!-- =/pagination -->
+				</section>
 			</div>
 		</div>
+			<!-- InstanceEndEditable -->
 		<!-- =/main -->
 
 		<!-- =footer -->
