--- a/app/contacts.html
+++ b/app/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ru">
+<html lang="ru"><!-- InstanceBegin template="/Templates/news.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -10,14 +10,14 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- TemplateBeginEditable name="doctitle" -->
-<title>Новости</title>
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>Контакты</title>
+<!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/css/styles.min.css" />
 <script src="/js/libs.min.js"></script>
 
 
-<link rel="stylesheet" href="../outdatedbrowser/outdatedbrowser.min.css" />
+<link rel="stylesheet" href="outdatedbrowser/outdatedbrowser.min.css" />
 <script src="/outdatedbrowser/outdatedbrowser.min.js"></script>
 <script src="/outdatedbrowser/detect.js"></script>
 
@@ -25,8 +25,8 @@
 <script>if(/*@cc_on!@*/false){document.documentElement.className+=' ie10';}</script>
 <!--<![endif]-->
 
-<!-- TemplateBeginEditable name="head" -->
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -38,7 +38,7 @@
 	    		<div class="header__inner d-flex align-items-center">
 			    	<div class="col-8 d-flex align-items-center">
 				    	<div class="logo">
-				    		<a href="/"><img src="../images/logo.png" alt="SB NAGAMOCHI" /></a>
+				    		<a href="/"><img src="images/logo.png" alt="SB NAGAMOCHI" /></a>
 				    	</div>
 						<!-- =nav -->
 						<nav id="navbar">
@@ -46,9 +46,9 @@
 								<ul class="nav nav-tabs mainnav d-flex">
 									<li class="active"><span>COMPANY</span></li>
 									<li><a href="#" title="">PRODUCTS</a></li>
-									<li><a href="../catalog.html" title="">CATALOGUE</a></li>
+									<li><a href="catalog.html" title="">CATALOGUE</a></li>
 									<li><a href="#" title="">Did you know?</a></li>
-									<li><a href="../contacts.html" title="">Contact us</a></li>
+									<li><a href="contacts.html" title="">Contact us</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -66,18 +66,80 @@
 			    	</div>
 	    		</div>
 	    	</div>
-	    	<!-- TemplateBeginEditable name="EditRegion5" -->
-			<!-- TemplateEndEditable -->		
+	    	<!-- InstanceBeginEditable name="EditRegion5" -->
+			<!-- InstanceEndEditable -->		
 		</header>
 		<!-- =/header -->
 
 		<!-- =main -->
-		<!-- TemplateBeginEditable name="EditRegion3" -->
-		<div class="main">
+		<!-- InstanceBeginEditable name="EditRegion3" -->
+		<div class="main main-contacts">
 			<div class="container">
+				<div class="d-flex w-100">
+					<div class="content col-offset-1 col-4">
+						<main>
+							<h1>CONTACT US</h1>
+							<h3>RMP NAGAMOCHI TECHNOLOGY JAPAN CO., LTD.</h3>
+							<div class="address">1-6-26 Ace Building 601, Higashi-Benzai, Asaka-shi, Saitama 351-0022, Japan</div>
+							<div class="contacts__cell">
+								<p>Tel</p>
+								<a href="tel:+81484869173" title="" class="tel">+81 48-486-9173</a>
+							</div>
+							<div class="contacts__cell">
+								<p>Fax</p>
+								<a href="tel:+81484869173" title="" class="tel">+81 48-486-9203</a>
+							</div>
+							<div class="contacts__cell">
+								<p>E-mail</p>
+								<a href="mailto:enquiry@sbparts.jp" class="email">enquiry@sbparts.jp</a>
+							</div>
+						</main>
+					</div>
+					<div class="col-offset-1 col-3">
+						<form action="#" method="post" class="callback__form">
+							<fieldset>
+								<div class="select-wrapper">
+									<select name="reviewobject" class="reviewobject" id="selectreview" placeholder="Country">
+										<option value="Autstralia">Autstralia</option>
+										<option value="Albania">Albania</option>
+										<option value="Angola">Angola</option>
+										<option value="Armenia">Armenia</option>
+										<option value="Russia">Russia</option>
+										<option value="Spain">Spain</option>
+										<option value="Japan">Japan</option>
+										<option value="USA">USA</option>
+										<option value="Ukraine">Ukraine</option>
+										<option value="New zeland">New zeland</option>
+									</select>
+								</div>
+								<div class="input-field">
+									<label for="mcallback_name" class="name-field">Your Name</label>
+									<label for="mcallback_name" class="helper-field helper-field-name">Your Name</label>
+									<input type="email" id="mcallback_name" name="name" class="form-control required" value="">
+								</div>
+								<div class="input-field">
+									<label for="mcallback_tel" class="name-field">Your Phone</label>
+									<label for="mcallback_tel" class="helper-field helper-field-name">Your Phone</label>
+									<input type="tel" id="mcallback_tel" name="tel" class="form-control tel required" value="">
+								</div>
+								<div class="input-field textarea-field">
+									<label for="mcallback_msg" class="name-field">Your Enquiry</label>
+									<label for="mcallback_msg" class="helper-field helper-field-msg">Your Enquiry</label>
+									<textarea id="mcallback_msg" name="msg" class="form-control textarea required"></textarea>
+								</div>
+
+								<div class="captcha">
+									<img src="tmp/captcha.jpg" alt="" />
+								</div>
+
+								<button type="submit" class="submit btn btn-black"><span>Continue</span></button>
+							</fieldset>
+						</form>
+					</div>
+				</div>
 			</div>
-		</div>		
-		<!-- TemplateEndEditable -->
+		</div>
+			<!-- InstanceEndEditable -->
 		<!-- =/main -->
 
 		<!-- =footer -->
@@ -85,7 +147,7 @@
 			<div class="container">
 				<div class="footer__inner d-flex align-items-center">
 					<div class="copyright flex-grow-1 d-flex align-items-center">
-						<img src="../images/rmp.png" alt="" /> RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
+						<img src="images/rmp.png" alt="" /> RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
 					</div>
 					<div class="lang">
 						<span class="current">Eng</span>
@@ -136,7 +198,7 @@
 				</div>
 
 				<div class="captcha">
-					<img src="../tmp/captcha.jpg" alt="" />
+					<img src="tmp/captcha.jpg" alt="" />
 				</div>
 
 				<button type="submit" class="submit btn btn-black"><span>Continue</span></button>
@@ -225,7 +287,7 @@
 <script src="/js/jquery.nicescroll.min.js"></script>
 <script src="/js/engine.js"></script>
 <link rel="stylesheet" property="stylesheet" href="/css/selectize.css" />
-<!-- TemplateBeginEditable name="EditRegion4" -->
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" -->
+<!-- InstanceEndEditable -->
 </body>
-</html>
+<!-- InstanceEnd --></html>
