сделан MARKET COVERAGE на странице About

--- a/app/about.html
+++ b/app/about.html
@@ -224,7 +224,117 @@
 				<!-- =coverage -->
 				<div class="coverage">
 					<div class="container">
-						<h2 class="title text-center">MarkeT coverage </h2>						
+						<h2 class="title text-center">MarkeT coverage </h2>
+						<div class="col-offset-1">
+							<div class="coverage__row">
+								<div class="col-1 coverage__title">CALLIPER<br>KIT</div>
+								<div class="col-8">
+									<div class="columns">
+										<div class="column column-color1" style="left: 0%;width: 90%"></div>
+										<div class="column column-color2" style="left: 90%;width: 3%"></div>
+										<div class="column column-color3" style="left: 93%;width: 2%"></div>
+										<div class="column column-color4" style="left: 95%;width: 5%"></div>
+										<div class="over"></div>
+										<div class="dots">
+											<div class="dot" style="left: 45%">89.3</div>
+											<div class="dot" style="left: 86.5%">2.4</div>
+											<div class="dot" style="left: 89%">2.1</div>
+											<div class="dot" style="left: 93%">6.2</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="coverage__row">
+								<div class="col-1 coverage__title">Hoses</div>
+								<div class="col-8">
+									<div class="columns">
+										<div class="column column-color1" style="left: 0%;width: 90%"></div>
+										<div class="column column-color2" style="left: 90%;width: 2%"></div>
+										<div class="column column-color3" style="left: 92%;width: 2%"></div>
+										<div class="column column-color4" style="left: 94%;width: 6%"></div>
+										<div class="over"></div>
+										<div class="dots">
+											<div class="dot" style="left: 48%">89.1</div>
+											<div class="dot" style="left: 86%">1.4</div>
+											<div class="dot" style="left: 88%">1.5</div>
+											<div class="dot" style="left: 92%">8</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="coverage__row">
+								<div class="col-1 coverage__title">PADS <br> shoes</div>
+								<div class="col-8">
+									<div class="columns">
+										<div class="column column-color1" style="left: 0%;width: 43%"></div>
+										<div class="column column-color2" style="left: 43%;width: 35%"></div>
+										<div class="column column-color3" style="left: 78%;width: 14%"></div>
+										<div class="column column-color4" style="left: 92%;width: 8%"></div>
+										<div class="over"></div>
+										<div class="dots">
+											<div class="dot" style="left: 40%">43.5</div>
+											<div class="dot" style="left: 74%">35</div>
+											<div class="dot" style="left: 88%">13.3</div>
+											<div class="dot" style="left: 95%">8</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="coverage__row">
+								<div class="col-1 coverage__title">Discs</div>
+								<div class="col-8">
+									<div class="columns">
+										<div class="column column-color1" style="left: 0%;width: 47%"></div>
+										<div class="column column-color2" style="left: 47%;width: 35%"></div>
+										<div class="column column-color3" style="left: 82%;width: 7%"></div>
+										<div class="column column-color4" style="left: 89%;width: 11%"></div>
+										<div class="over"></div>
+										<div class="dots">
+											<div class="dot" style="left: 23%">47.7</div>
+											<div class="dot" style="left: 63%">36.3</div>
+											<div class="dot" style="left: 84%">7.5</div>
+											<div class="dot" style="left: 92%">8.5</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="coverage__row">
+								<div class="col-1 coverage__title">Cylinders</div>
+								<div class="col-8">
+									<div class="columns">
+										<div class="column column-color1" style="left: 0%;width: 96%"></div>
+										<div class="column column-color2" style="left: 96%;width: 1%"></div>
+										<div class="column column-color3" style="left: 97%;width: 1%"></div>
+										<div class="column column-color4" style="left: 98%;width: 2%"></div>
+										<div class="over"></div>
+										<div class="dots">
+											<div class="dot" style="left: 47%">96.7</div>
+											<div class="dot" style="left: 94%">1.5</div>
+											<div class="dot" style="left: 96%">0.4</div>
+											<div class="dot" style="left: 98%">1.4</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="coverage__signature d-flex justify-content-center">
+							<div class="signature__item color1">
+								<div class="circle"></div>
+								Japanese
+							</div>
+							<div class="signature__item color2">
+								<div class="circle"></div>
+								European
+							</div>
+							<div class="signature__item color3">
+								<div class="circle"></div>
+								American
+							</div>
+							<div class="signature__item color4">
+								<div class="circle"></div>
+								Korean
+							</div>
+						</div>
 					</div>
 				</div>
 				<!-- =/coverage -->
