pixel perfect About

--- a/app/about.html
+++ b/app/about.html
@@ -99,7 +99,7 @@
 				<div class="container">	
 					<div class="col-offset-1">
 						<div class="text">
-							<div class="title">SB Nagamochi</div>
+							<div class="head">SB Nagamochi</div>
 							<p class="subtitle">The fastest must be <span>brakes!</span></p>
 							<div class="text__inner">
 								<p>SB BRAND was born through the succession from the business of SOMA BRAKE, which was born when Shirou Souma participated in the establishment of the Kashiyama Press Industry in 1960, and has accumulated various experiences and knowledges for over 60 years, and engaged in after-sales of automobile parts. We changed the brand name to RMP in 2013, and we also have manufactured and sold a wide range of brake parts for automobiles covering all over the world. SB's "S" has the meanings of "SOMA" "Safety: safety" "Speed: Speeedy development".</p>
@@ -128,7 +128,6 @@
 					</div>
 
 					<img src="/tmp/image4.jpg" alt="" />
-
 
 					<!-- =groups -->
 					<div class="groups text-center">
@@ -224,7 +223,7 @@
 				<!-- =coverage -->
 				<div class="coverage">
 					<div class="container">
-						<h2 class="title text-center">MarkeT coverage </h2>
+						<h2 class="title text-center">MARKET COVERAGE </h2>
 						<div class="col-offset-1">
 							<div class="coverage__row">
 								<div class="col-1 coverage__title">CALLIPER<br>KIT</div>
