catalog, zoom items

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -11,7 +11,7 @@
 
 <meta name="robots" content="noindex,nofollow" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Каталог</title>
+<title>Catalog</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/css/styles.min.css" />
 <script src="/js/libs.min.js"></script>
@@ -90,56 +90,66 @@
 		<div class="main categories">
 			<div class="d-flex">
 				<div class="col category__item">
-					<a href="#" title="" class="category__link" style="background-image: url(../images/category/cat-1.jpg);">
-						<div class="category__inner">
-							<div class="category__num"><span>01</span></div>
-							<div class="category__desc">
-								<div class="category__title">BRAKE PADS & SHOES</div>
-								<div class="category__text"> Brake Shoes for Passenger cars, Brake Shoes for trucks and buses, Brake pads</div>
+					<a href="#" title="" class="category__link">
+						<div class="category__inner" style="background-image: url(../images/category/cat-1.jpg);">
+							<div class="category__column">
+								<div class="category__num"><span>01</span></div>
+								<div class="category__desc">
+									<div class="category__title">BRAKE PADS & SHOES</div>
+									<div class="category__text"> Brake Shoes for Passenger cars, Brake Shoes for trucks and buses, Brake pads</div>
+								</div>
 							</div>
 						</div>
 					</a>
 				</div>
 				<div class="col category__item">
-					<a href="#" title="" class="category__link" style="background-image: url(../images/category/cat-2.jpg);">
-						<div class="category__inner">
-							<div class="category__num"><span>02</span></div>
-							<div class="category__desc">
-								<div class="category__title">rotor discs</div>
-								<div class="category__text">The brake disc or rotor is made of high-carbon cast iron. This is connected to the wheel and/or the axle.</div>								
+					<a href="#" title="" class="category__link">
+						<div class="category__inner" style="background-image: url(../images/category/cat-2.jpg);">
+							<div class="category__column">
+								<div class="category__num"><span>02</span></div>
+								<div class="category__desc">
+									<div class="category__title">rotor discs</div>
+									<div class="category__text">The brake disc or rotor is made of high-carbon cast iron. This is connected to the wheel and/or the axle.</div>								
+								</div>
 							</div>
 						</div>
 					</a>
 				</div>
 				<div class="col category__item">
-					<a href="#" title="" class="category__link" style="background-image: url(../images/category/cat-3.jpg);">
-						<div class="category__inner">
-							<div class="category__num"><span>03</span></div>
-							<div class="category__desc">
-								<div class="category__title">cylinders</div>
-								<div class="category__text">The master brake cylinders, The slave brake cylinders, the clutch master cylinders, clutch slave cylinders</div>
+					<a href="#" title="" class="category__link">
+						<div class="category__inner" style="background-image: url(../images/category/cat-3.jpg);">
+							<div class="category__column">
+								<div class="category__num"><span>03</span></div>
+								<div class="category__desc">
+									<div class="category__title">cylinders</div>
+									<div class="category__text">The master brake cylinders, The slave brake cylinders, the clutch master cylinders, clutch slave cylinders</div>
+								</div>
 							</div>
 						</div>
 					</a>
 				</div>
 				<div class="col category__item">
-					<a href="#" title="" class="category__link" style="background-image: url(../images/category/cat-4.jpg);">
-						<div class="category__inner">
-							<div class="category__num"><span>04</span></div>
-							<div class="category__desc">
-								<div class="category__title">brake & clutch hoses</div>
-								<div class="category__text">Break hoses, clutches and steering boosters. Pipes and components</div>
+					<a href="#" title="" class="category__link">
+						<div class="category__inner" style="background-image: url(../images/category/cat-4.jpg);">
+							<div class="category__column">
+								<div class="category__num"><span>04</span></div>
+								<div class="category__desc">
+									<div class="category__title">brake & clutch hoses</div>
+									<div class="category__text">Break hoses, clutches and steering boosters. Pipes and components</div>
+								</div>
 							</div>
 						</div>
 					</a>
 				</div>
 				<div class="col category__item">
-					<a href="#" title="" class="category__link" style="background-image: url(../images/category/cat-5.jpg);">
-						<div class="category__inner">
-							<div class="category__num"><span>05</span></div>
-							<div class="category__desc">
-								<div class="category__title">brake calipers kit</div>
-								<div class="category__text">Contain all items needed to rebuild a disc calipers on one car front or rear</div>
+					<a href="#" title="" class="category__link">
+						<div class="category__inner" style="background-image: url(../images/category/cat-5.jpg);">
+							<div class="category__column">
+								<div class="category__num"><span>05</span></div>
+								<div class="category__desc">
+									<div class="category__title">brake calipers kit</div>
+									<div class="category__text">Contain all items needed to rebuild a disc calipers on one car front or rear</div>
+								</div>
 							</div>
 						</div>
 					</a>
@@ -295,6 +305,7 @@
 <script src="/js/engine.js"></script>
 <link rel="stylesheet" property="stylesheet" href="/css/selectize.css" />
 <!-- InstanceBeginEditable name="EditRegion4" -->
+
 <!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
