Замена title на латиницу

--- a/app/new.html
+++ b/app/new.html
@@ -11,7 +11,7 @@
 
 <meta name="robots" content="noindex,nofollow" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Новость</title>
+<title>New</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/css/styles.min.css" />
 <script src="/js/libs.min.js"></script>
