--- a/app/about.html
+++ b/app/about.html
@@ -90,7 +90,7 @@
 		<div class="main main-about">
 			<div class="bg">
 				<div class="container">
-					<div class="d-flex align-items-center col-offset-1">
+					<div class="neck d-flex align-items-center col-offset-1">
 						<h1>ABOUT US</h1>						
 					</div>
 				</div>
