--- a/app/card.html
+++ b/app/card.html
@@ -11,7 +11,7 @@
 
 <meta name="robots" content="noindex,nofollow" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>New</title>
+<title>Card</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/css/styles.min.css" />
 <script src="/js/libs.min.js"></script>
@@ -72,77 +72,36 @@
 				<div class="container">
 					<div class="col-offset-1">
 						<ul class="d-flex">
-							<li><a href="#" title="">About Us</a></li>
-							<li><a href="#" title="">Materials & Technologies</a></li>
-							<li><a href="#" title="">Certificates & Warranty</a></li>
-							<li class="active"><span>News & Exhibitions</span></li>
+							<li class="active"><span>Brake pads & shoes</span></li>
+							<li><a href="#" title="">Rotor discs</a></li>
+							<li><a href="#" title="">Cylinders</a></li>
+							<li><a href="#" title="">Brake & clutch hoses</a></li>
+							<li><a href="#" title="">Brake calipers kit </a></li>
 						</ul>
 					</div>
 				</div>			
 			</div>
-			<!-- =/secondary-nav -->	
+			<!-- =/secondary-nav -->
 			<!-- InstanceEndEditable -->		
 		</header>
 		<!-- =/header -->
 
 		<!-- =main -->
 		<!-- InstanceBeginEditable name="EditRegion3" -->
-		<div class="main">
-			<div class="container">	
-				<div class="back col-offset-1"><a href="news.html" title="" class="back__link">Back</a></div>
-				<div class="d-flex">
-					<div class="content col-offset-1 col-5">
-						<main>
-							<h1>THE ATTACKS OF ROTORS AND SCORCHING PROCESS</h1>
+		<div class="main main-card">
+			<div class="bg">
+				<div class="container">
+					<div class="neck d-flex align-items-center col-offset-1">
+						<h1>BRAKE PADS & SHOES</h1>
+					</div>
+				</div>
+			</div>
 
-							<p style="margin-bottom: 0; font-size: 20px;">Its when the rotor material "attacks" brake pad surface.</p>
-
-							<p style="font-size: 20px; color: #fff"><strong>Characteristic damages:</strong></p>
-							<br>
-							<img src="/tmp/image1.jpg" alt="" />
-
-							<br>
-							<p>In normal braking process the brake pad material travels to rotor surface to create the friendly braking layer. <a href="#" title="">The hardness is most</a> important (but not the only) physical property is responsible for this process. SAE J431 G3000 standards for the automotive brake rotor and drum includes Hardness range by Barinell from 187 to 241. (See below Rotors material quality) </p>
-							<br> 
-
-							<p>Non abrasive Ceramic Brake pads are more susceptible to low hardness compared to relatively soft metallic brake pad formulation. The hardness for Ceramic pad should stay above 220 by Brinell scale. For example, most of OEM rotors are produced with hardness above 240 by Brinell. But, unfortunately, aftermarket rotors have hardness well below it.</p>
-							<br>
-
-							<img src="/tmp/image2.jpg" alt="" class="justifyleft" />
-							<p>The scorching heats the matrix of the friction material to 600-700°C, allowing carbonization to occur to the first 0.5 to 1.5mm of brake pad surface.  It is good prevention against rotors attack for aftermarket rotors which is normally produced with Hardness 170-200. Besides, it reduce the bedding-in time on replacement brake pads to a minimum with ready to use soft carbonization layer.</p>
-							<br>
-
-							<p>Here is the same formula appearance with and without scorching.</p>
-							<br>
-
-							<h2>ROTORS MATERIAL QUALITY.</h2>
-							<p>Rotors are usually made of gray iron due to its superior heat handling and damping (vibration absorption) character. The quality are depends on combination of Physical properties, Chemical composition and Inferior microstructure.</p>
-							<br>
-
-							<h5>Physical properties</h5>
-							<p>Specified by SAE J431 G3000 standards for the automotive brake rotor and drum includes:</p>
-							<ol>
-								<li>Hardness by Barinell: 187-241, </li>
-								<li>Minimum tensile strength of 30,000 psi</li>
-							</ol>
-
-							<h5>Chemical composition G3000 gray iron:</h5>
-							<ul>
-								<li>Carbon 3.10%-3.40%, </li>
-								<li>Silicon 1.90%-2.30%, </li>
-								<li>Manganese 0.60%-0.90%, </li>
-								<li>Sulfur Max 0.15%, </li>
-								<li>Phosphorus Max 0.15%, </li>
-								<li style="color: #00b4a9"><strong>Total Carbon equivalent of 3.9%-4.15</strong></li>
-							</ul>
-							<br>
-
-							<h5>Physical properties</h5>
-							<img src="/tmp/image3.jpg" alt="" class="justifyright" />
-							<p>Pearlitic microstructure = the graphite distribution and matrix structure of the cast iron. This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.  This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite. Pearlitic microstructure = the graphite distribution and matrix structure of the cast iron. This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.  This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.</p>
-							<br>
-
-							<h3>RANGE OF FRICTION MATERIALS USED BY SB NAGAMOCHI BRAKE PADS INCLUDES:</h3>
+			<div class="container">
+				<div class="content">
+					<main>
+						<div class="top col-offset-1 col-8">
+							<h3>Range of friction materials used by SB Nagamochi brake pads includes:</h3>
 							<table width="100%">
 								<tr>
 									<th>C63</th>
@@ -150,6 +109,9 @@
 									<th>C13</th>
 									<th>E3</th>
 									<th>M75</th>
+									<th>M76</th>
+									<th>M73</th>
+									<th>MS1</th>
 								</tr>
 								<tr>
 									<td>Ceramic for small cars</td>
@@ -157,39 +119,57 @@
 									<td>Ceramic for 4WD / Pick ups / Vans</td>
 									<td>Ceramic for 4WD / Pick ups / Vans</td>
 									<td>Low metalic for small EURO cars</td>
-								</tr>
-								<tr>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Low metalic for small EURO cars</td>
+									<td>Low metalic for 4WD / Pick ups / Vans</td>
+									<td>Carbon metallic for EURO cars</td>
+									<td>Performance formula</td>
 								</tr>
 							</table>
+						</div>
 
-							<h4>HEADLINE LEVEL 4</h4>
-							<blockquote>Some important information must be visible! Some important information must be visible! </blockquote>
-						</main>
-					</div>
-					<aside class="col-offset-1 col-3">
-						<section class="more-list">
-							<header>
-								<h1>Read more</h1>
-							</header>
-							<article class="more__item">
-								<h3 class="more__title"><a href="#" title="">Tips on installation and brake pads rating</a></h3>
-								<p>Changing Brake Pads is simple. But there are some important considerations sometimes missed by installers.</p>
-							</article>
-							<article class="more__item">
-								<h3 class="more__title"><a href="#" title="">How to rate your new brake pads</a></h3>
-								<p>But there are some important considerations sometimes missed by installers.</p>
-							</article>
-							<article class="more__item">
-								<h3 class="more__title"><a href="#" title="">WHEN BRAKE PAD MEETS THE ROTOR</a></h3>
-								<p>The first mating process of rotor and pad surfaces play a vital role for their future life and performance. It’s also called BED-IN process.</p>
-							</article>
-						</section>
-					</aside>
+						<div class="text">
+							<div class="row row-pic-left">
+								<div class="col-4">
+									<div class="pic pic-shadow pic-shadow-right">
+										<img src="/tmp/card-1.jpg" alt="" />
+									</div>
+								</div>
+								<div class="col-5">
+									<div class="description">
+										<h2 class="title">BRAKE PADS</h2 class="title">
+										<p>Non Asbestos Organic, Non-abrasive Semi and Low Metallic plus several types of Ceramic materials with different additives and unique production processes are used in production range. All the above materials are environmentally friendly - with lowest brake dust levels to protect the environment and keep your rims free of unsightly brake dust. The friction class by LINK dynamic test for all formulations is from “F” to “H”. It guarantees drivers highest road safety with high resistance to FADE (brake power loss in extreme situation). The extensive range of options guarantees comfortable and effective brake filing for each different car and driving style and ensure safety on road and long life of brake rotor.</p>
+									</div>
+								</div>
+							</div>
+
+							<div class="row row-pic-right">
+								<div class="col-5 col-offset-1">
+									<div class="description">
+										<h2 class="title">Brake Shoes for <br>Passenger cars</h2 class="title">
+										<p>Organic and non-ferrous fibres formulation specially designed to provide safe and comfortable drive for passenger vehicles. It is an ultra-quiet, low dust and long lasting material. It is gentle on brake drums and has a stable coefficient of friction over a wide range of temperatures and speeds. It is well known for its qualities of smooth progressive brake and great safety in extreme braking.</p>
+									</div>
+								</div>
+								<div class="col-4 d-flex justify-content-end">
+									<div class="pic pic-shadow pic-shadow-left">
+										<img src="/tmp/card-2.jpg" alt="" />
+									</div>
+								</div>
+							</div>
+
+							<div class="row row-pic-right">
+								<div class="col-4">
+									<div class="pic pic-shadow pic-shadow-right">
+										<img src="/tmp/card-3.jpg" alt="" />
+									</div>
+								</div>
+								<div class="col-5">
+									<div class="description">
+										<h2 class="title">Brake Shoes for trucks <br> and buses</h2 class="title">
+										<p>The unique combination of Mineral Wool and Metallic fibre. It’s also contains brass, acrylic and glass fibres blended with good structural integrity. This formula perfectly suits air brake systems used in commercial vehicles. It has excellent heat stability and is designed to work with great radial and tangential loads. It is gentle on the mating surface and consistent in performance over a wide range of cycles.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</main>
 				</div>
 			</div>
 		</div>
@@ -342,6 +322,7 @@
 <script src="/js/engine.js"></script>
 <link rel="stylesheet" property="stylesheet" href="/css/selectize.css" />
 <!-- InstanceBeginEditable name="EditRegion4" -->
+
 <!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
