--- a/app/homepage.html
+++ b/app/homepage.html
@@ -202,7 +202,7 @@
 	<div class="inner" role="document">
 		<div class="container">
 			<div class="row">
-				<div class="menu d-flex">
+				<div class="menu d-flex flex-wrap">
 					<div class="col cell">
 						<dl>
 							<dt>COMPANY</dt>
